.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puttyimages-ipfs2
  namespace: likecoin
spec:
  selector:
    matchLabels:
      app: puttyimages-ipfs2
  replicas: 1
  template:
    metadata:
      labels:
        app: puttyimages-ipfs2
    spec:
      containers:
      - name: ipfs
        image: ipfs/go-ipfs:v0.4.15
        ports:
        - containerPort: 5001
        - containerPort: 8080
        volumeMounts:
        - name: ipfs-persistent-storage
          mountPath: /data/ipfs
      volumes:
      - name: ipfs-persistent-storage
        persistentVolumeClaim:
          claimName: ipfs-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puttyimages-db
  namespace: likecoin
spec:
  selector:
    matchLabels:
      app: puttyimages-db
  replicas: 1
  template:
    metadata:
      labels:
        app: puttyimages-db
    spec:
      containers:
      - name: pgsql
        image: postgres:10.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgsql-persistent-storage
          mountPath: /data
      volumes:
      - name: pgsql-persistent-storage
        persistentVolumeClaim:
          claimName: pgsql-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puttyimages-web
  namespace: likecoin
spec:
  selector:
    matchLabels:
      app: puttyimages-web
  replicas: 1
  template:
    metadata:
      labels:
        app: puttyimages-web
    spec:
      containers:
      - name: web
        image: oursky/puttyimages-web:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: likecoin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: puttyimages-web
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs
  namespace: likecoin
  labels:
    app: puttyimages-ipfs2
spec:
  ports:
    - name: internal
      port: 5001
    - name: public
      port: 8080
  selector:
    app: puttyimages-ipfs2
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: likecoin
  labels:
    app: puttyimages-db
spec:
  ports:
    - port: 5432
  selector:
    app: puttyimages-db
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: puttyimages
  name: puttyimages
  namespace: likecoin
  annotations:
    ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: cdn-puttyimages.pandawork.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ipfs
          servicePort: 8080
  - host: puttyimages.pandawork.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
  tls:
  - hosts:
    - cdn-puttyimages.pandawork.com
    - puttyimages.pandawork.com
    secretName: web-tls
